--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <div class="mw7 center">
             <header class="flex flex-column flex-row-ns items-center tc tl-ns">
                 <div class="w-100 w-70-ns">
-                    <h1 class="f2">Basic Static Website</h1>
-                    <p class="f4">This is a simple one-page website.</p>
+                    <h1 class="f2">No Thank You Jesus!</h1>
+                    
                 </div>
                 <div class="w-100 w-30-ns tr">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="76" height="76" style="fill: rgba(0,0,0,.8)">
@@ -19,13 +19,7 @@
                     </svg>
                 </div>
             </header>
-            <article>
-                <p class="tj bl bw1 b--gold pl2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pretium non turpis et scelerisque. Vestibulum
-                    condimentum sem vitae efficitur auctor. Quisque a enim id augue iaculis laoreet. Vivamus tincidunt erat
-                    ut orci aliquet, in scelerisque ante semper. Aenean ac porta lectus. Nullam rutrum purus et risus sagittis,
-                    id elementum arcu maximus. Donec at lectus at augue blandit mollis sit amet hendrerit orci. Morbi a porttitor
-                    arcu, vel volutpat enim.</p>
-            </article>
+
         </div>
     </main>
 </body>
