--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <title>Basic Static Website</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://unpkg.com/tachyons@4.9.1/css/tachyons.min.css" />
+    <style>
+        
+/* Rectangle */
+
+body {
+background: radial-gradient(212.38px at 50% 72.85%, #F3EB86 0%, #EFE66F 37.5%, #EDD364 71.87%, #EDBE56 100%);
+        }
+        
+    </style>
 
 <body class="pa3 pa5-ns sans-serif lh-copy bt bw2 b--gold black-80">
     <main>
